--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,3 +26,7 @@ jobs: # a collection of steps
           key: spring-recipe-project-{{ checksum "pom.xml" }}
 
       - run: mvn clean verify
+
+      - run:
+          name: Send to CodeCov
+          command: bash <(curl -s https://codecov.io/bash)
