--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -4,7 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.platform=mysql
 spring.jpa.show-sql=true
+spring.flyway.locations=classpath:db/migration/{vendor}
 
 # properties to generate schema on startup and import into file
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
